[package]
name = "synchronizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "In-enclave multi-node storage synchronizer: mesh replication of LUKS-encrypted volumes over attested Noise tunnels."

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }
# (De)serialize the 65-byte SEC1 control pubkey in `KeyState`: serde's
# derive only covers fixed arrays up to length 32. Same crate
# enclavia-protocol already uses for its byte fields. Pulled in by `serde`.
serde_bytes = { version = "0.11", optional = true }
ciborium = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["sync"] }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tokio-vsock = { workspace = true, optional = true }
# Wire types + the pure transition-link verifier. The `Transition` RPC
# carries a #47 upgrade `ChainLink`; verifying it needs `ChainLink` /
# `UpgradePayload` / `verify_chain_attestation` plus the 65-byte SEC1
# P-256 control-pubkey contract from `AttestedIdentity`. `default-features
# = false` strips the async-transport (tokio) bits the `wire` feature does
# not need; the `node` feature turns `async-transport` back on for the
# Noise responder helpers the listener uses.
enclavia-protocol = { path = "../enclavia-protocol", optional = true, default-features = false }
snow = { workspace = true, optional = true }
# Verifies the OLD key's 64-byte raw r||s ECDSA P-256 control signature
# over the transition-link payload, against the pubkey registered at
# first attestation. Pulled in by the `wire` feature alongside the
# verifier; the pure state machine (no features) stays crypto-free.
p256 = { workspace = true, optional = true }
# SHA-256 of each PcrsHex's PCR triple, to bind payload.from_pcrs /
# to_pcrs to the (old_key, new_key) the Transition op names. Pulled in
# by the `wire` feature.
sha2 = { workspace = true, optional = true }
# Mesh layer (#118) only. `async-trait` lets the AttestationProvider /
# mesh-transport traits stay object-safe (dyn-dispatched) across the
# vsock vs UDS/in-memory implementations; `rand` generates the per-boot
# P-256 mesh keypair and the backoff jitter; `aws-nitro-enclaves-nsm-api`
# drives `/dev/nsm` to produce the node's own attestation document (both
# the per-peer channel-bound docs and the startup self-attestation that
# derives the self-PCR allowlist digest); `hex` is used by the in-crate
# test fixtures that build hex-encoded PCR triples. All four are pulled in
# only by the `mesh` feature (implied by `node`).
async-trait = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
# `nix` feature exposes the `/dev/nsm` driver module (nsm_init /
# nsm_process_request / nsm_exit); the workspace pin strips it by default
# (only the `api` data types are unconditionally needed elsewhere). The
# production NsmAttestor drives the device, so it needs the driver.
aws-nitro-enclaves-nsm-api = { workspace = true, optional = true, features = ["nix"] }
# Raft replication (#119, slice 3) only. `openraft` is the consensus
# engine: in-memory log + state machine (no persistence per the #16
# design), `serde` for CBOR-encoding the replicated ops + snapshots and
# `storage-v2` for the split RaftLogStorage / RaftStateMachine traits the
# in-memory store implements. `loosen-follower-log-revert` is REQUIRED by
# the no-persistence design: a node that restarts wipes its in-memory log
# (the log "reverts" to empty), and openraft otherwise panics the leader
# on a follower log reversion. With it, the leader instead replays the log
# / sends a snapshot to re-hydrate the restarted node, which is exactly the
# #121 hydrate-from-peers behaviour ("erase a node's data and reboot it
# without data loss" is the documented use case). The snapshot blob itself
# is CBOR (`ciborium`), so no extra JSON dep is needed. Pulled in only by
# `raft`.
openraft = { version = "0.9.24", optional = true, features = [
    "serde",
    "storage-v2",
    "loosen-follower-log-revert",
] }

[features]
default = []
serde = ["dep:serde", "dep:serde_bytes"]
# Wire RPC types + the pure transition-link verifier. Carries a #47
# upgrade `ChainLink`, so it pulls in `enclavia-protocol` (chain +
# attestation, no async transport), `p256`, and `sha2`. No tokio, no
# Noise: that is the `node` feature's job.
wire = [
    "serde",
    "dep:ciborium",
    "dep:enclavia-protocol",
    "dep:p256",
    "dep:sha2",
]
# Async single-node RPC surface. Adds tokio + the Noise responder
# helpers (async-transport) on top of `wire`. Implies `wire` and the
# mesh layer (the peer mesh shares the Noise + attestation plumbing).
node = ["wire", "mesh", "dep:tokio", "tokio/io-util", "enclavia-protocol/async-transport", "dep:snow"]
# Mutually-attested peer mesh (#118). Boot-time peer attestation,
# self-PCR allowlist, long-lived per-peer transport with reconnect +
# backoff. Pulls in the async-trait-backed AttestationProvider /
# mesh-transport abstractions, the `/dev/nsm` driver for the node's own
# attestation, and `rand` for the per-boot mesh keypair + backoff jitter.
# Always uses `tokio-vsock` in the production transport (this is an
# in-enclave crate); a UDS/in-memory transport for dev-machine multi-node
# tests lives behind `test-utils`, never in the production binary.
mesh = [
    "wire",
    "dep:tokio",
    "tokio/io-util",
    "tokio/sync",
    "tokio/time",
    "tokio/rt",
    "tokio/macros",
    "enclavia-protocol/async-transport",
    "dep:snow",
    "dep:tracing",
    "dep:async-trait",
    "dep:rand",
    "dep:p256",
    "dep:hex",
    "dep:aws-nitro-enclaves-nsm-api",
    "dep:tokio-vsock",
]
# Build the listener binary. Pick one of `debug` (UDS) or `enclave`
# (vsock) — same pattern as the other in-enclave crates.
debug = ["node", "tokio/net", "tokio/macros", "tokio/rt-multi-thread", "dep:tracing", "dep:tracing-subscriber"]
enclave = ["node", "tokio/net", "tokio/macros", "tokio/rt-multi-thread", "dep:tracing", "dep:tracing-subscriber", "dep:tokio-vsock"]
# QEMU nitro-enclave variant. Identical transport to `enclave` (the
# customer listener and the mesh both ride vsock, since an in-enclave
# binary can only reach the host over vsock under QEMU's
# vhost-device-vsock bridge), but the attestation verifier runs the
# skip-cert-chain path. QEMU's nitro-enclave machine type measures the
# EIF into real PCR0/1/2 yet self-signs the NSM document rather than
# chaining to the AWS Nitro CA, which is exactly what the per-enclave
# debug_mode flag accepts (skip the cert-chain check only). Neither
# `debug` (UDS dev listener) nor `enclave` (full-chain verify) fits a
# QEMU cluster on its own; this feature is the third combination.
qemu = ["enclave"]
# Dev-machine multi-node mesh test support: UDS/in-memory transport +
# FakeAttestor. Tests only, never compiled into the production binary.
# Adds `tokio/net` for the UDS listener/stream and turns on
# enclavia-protocol's `test-utils` so `FakeAttestation` fixtures are
# reachable from the mesh `FakeAttestor`.
test-utils = ["mesh", "tokio/net", "enclavia-protocol/test-utils"]
# Raft replication layer (#119, slice 3). Wraps the pure StateMachine in
# an openraft state machine, drives an in-memory log, and rides the
# AppendEntries / Vote / InstallSnapshot RPCs over the `mesh` transport's
# `Mesh::call`. Library layer only: it does NOT rewire main.rs / the
# listener onto Raft (that is slice 4). Implies `mesh` (transport +
# RequestHandler) and pulls in openraft + serde_json for the snapshot blob.
raft = [
    "mesh",
    "dep:openraft",
    "dep:ciborium",
]

[dev-dependencies]
ciborium = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "io-util"] }
# Tests construct real P-256 keypairs from deterministic seeds, sign
# transition-link payloads, and build `FakeChainAttestation` fixtures to
# drive the listener/Node verifier end to end. P-256 is the upgrade-chain
# control-key algorithm (#21/#47).
enclavia-protocol = { path = "../enclavia-protocol", features = ["test-utils"] }
p256 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
# Tests build `PcrsHex` fixtures from raw byte seeds and hex-encode them
# to match `verify_transition_link`'s key derivation.
hex = { workspace = true }
# The 3-node mesh integration test (tests/mesh.rs, gated on `test-utils`)
# gives each node its own temp dir for its inbound UDS socket.
tempfile = "3"
# The integration test's `TaggingHandler` implements the object-safe
# `RequestHandler` trait, which is `#[async_trait]`.
async-trait = { workspace = true }
# The NodeViewConsistent Raft fuzz harness (tests/raft_node_view_consistent.rs,
# gated on `raft` + `test-utils`) drives a randomized op / fault interleaving
# from deterministic per-seed `StdRng`s, no external proptest dependency.
rand = { workspace = true }

[[bin]]
name = "enclavia-synchronizer"
path = "src/main.rs"
required-features = ["node"]

# Customer-RPC smoke client for the QEMU 3-node harness
# (tests/run_e2e_synchronizer.sh). Speaks wire::Request/Response over a
# vhost-device-vsock proxy UDS; builds the synthetic attestation doc from
# enclavia-protocol's `test-utils` (a dev-dependency, active for
# examples), so it needs `node` for the listener Frame + Noise helpers.
[[example]]
name = "mesh_client"
path = "examples/mesh_client.rs"
required-features = ["node"]
